[package]
name = "embedded-websocket"
version = "0.9.0"
authors = ["David Haig"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ninjasource/embedded-websockets.git"
description = "A lightweight websocket library for embedded systems (no_std)"
keywords = ["websockets", "websocket", "embedded", "no_std"]
categories = ["embedded", "no-std", "network-programming"]
readme = "README.md"

[dependencies]
base64 = { version = "0.13.0", default-features = false }
base64-simd = { version = "0.5.0", default-features = false, optional = true }
byteorder = { version = "1.4.3", default-features = false }
cfg-if = "1.0.0"
embedded-io = { version = "0.3.0", default-features = false, features = ["async"] }
heapless = "0.7.14"
httparse = { version = "1.7.1", default-features = false }
rand_core = "0.6.3"
sha1 = { version = "0.10.1", default-features = false }

[dev-dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
cfg-if = "1.0.0"
embedded-io = { version = "0.3.0", default-features = false, features = ["async", "std"] }
embedded-tls = "0.8.0"
log = "0.4.17"
once_cell = "1.12.0"
rand = "0.8.5"
route-recognizer = "0.3.1"
rpds = "0.11.0"
simple_logger = "2.1.0"
tokio = { version = "1.19.2", features = ["macros", "net", "rt-multi-thread", "io-util"] }
tokio-stream = { version = "0.1.9", features = ["net"] }

# see readme for no_std support
[features]
default = ["std"]
std = ["embedded-io/std"]
example-tokio = ["embedded-io/tokio"]

[[example]]
name = "server_tokio"
path = "examples/server_async/main.rs"
required-features = ["example-tokio"]

[[example]]
name = "client_tokio"
path = "examples/client_async/main.rs"
required-features = ["example-tokio"]

[profile.release]
incremental = true
lto = "thin"
strip = "debuginfo"

[profile.min-size-release]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "s"

[profile.release-strip]
inherits = "release"
strip = "symbols"

[profile.min-size-release-strip]
inherits = "min-size-release"
strip = "symbols"

[profile.dev.package.backtrace]
opt-level = 3
